--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.901.0",
     "@clack/prompts": "^0.11.0",
     "commander": "^14.0.0"
   },
