--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,6 +26,8 @@
     "@repo/webhooks": "workspace:*",
     "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.511.0",
@@ -34,6 +36,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "require-in-the-middle": "^7.5.2",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
