--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.907.0",
     "@clack/prompts": "^0.11.0",
     "commander": "^14.0.0"
   },
