--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "turbo dev --filter=!docs --filter=!@repo/cms",
     "lint": "ultracite lint",
     "format": "ultracite format",
     "test": "turbo test",
