feat: Implement accountant dashboard with inbox and client views
- Added InboxView component for document management with filtering and selection capabilities.
- Introduced ViewToggle component to switch between inbox and client views.
- Created useDashboardData hook for fetching and adapting dashboard data from API.
- Developed dashboard data adapter for transforming API document and client data.
- Enhanced UI with real-time stats, bulk selection, and improved filtering options.
- Documented integration and product planning for the new dashboard features.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev --filter=!docs --filter=!@repo/cms",
+    "dev": "turbo dev --filter=!docs --filter=!@repo/cms --filter=!email",
     "lint": "ultracite lint",
     "format": "ultracite format",
     "test": "turbo test",
